<resources>
    <string name="app_name">Login App</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="user">User</string>
    <string name="name">Name</string>
    <string name="cpf">CPF</string>
    <string name="code">Code</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="add_user">Add User</string>
</resources>