<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.activity.home.HomeFragment">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/name"
        android:textColorHint="@color/black"
        android:layout_margin="20dp"
        android:paddingHorizontal="16dp"
        android:background="@drawable/rounded_edittext"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/editTextCPF"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/cpf"
        android:textColorHint="@color/black"
        android:layout_margin="20dp"
        android:paddingHorizontal="16dp"
        android:background="@drawable/rounded_edittext"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"/>

    <EditText
        android:id="@+id/editTextCode"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/code"
        android:textColorHint="@color/black"
        android:layout_margin="20dp"
        android:paddingHorizontal="16dp"
        android:background="@drawable/rounded_edittext"
        android:inputType=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCPF"/>

    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/address"
        android:textColorHint="@color/black"
        android:layout_margin="20dp"
        android:paddingHorizontal="16dp"
        android:background="@drawable/rounded_edittext"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCode"/>

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/phone"
        android:textColorHint="@color/black"
        android:layout_margin="20dp"
        android:paddingHorizontal="16dp"
        android:background="@drawable/rounded_edittext"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddress"/>

    <Button
        android:id="@+id/addUserButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="start"
        android:layout_margin="20dp"
        android:backgroundTint="@color/purple_500"
        android:enabled="true"
        android:text="@string/add_user"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>