<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.login.LoginFragment">

    <EditText
        android:id="@+id/editTextUser"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:autofillHints="user"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/user"
        android:textColorHint="@color/black"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="16dp"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="password"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        android:imeActionLabel=""
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        android:selectAllOnFocus="true"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="start"
        android:backgroundTint="@color/purple_500"
        android:enabled="true"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>